6/placeholder-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  replicas: 10 
  selector: 
    matchLabels:
      pod: placeholder-pod
  template:
    metadata:
      labels:
        pod: placeholder-pod
    spec:
      priorityClassName: placeholder-priority
      terminationGracePreiodSeconds: 0
      containers:
        - name: ubuntu
          image: ubuntu
          command: ["sleep"] 
          args: ["infinity"]
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
